--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Nuestros Servicios</h2>
-                <p>Ofrecemos una amplia gama de servicios para satisfacer todas tus necesidades de lavandería</p>
+                <p>Ofrecemos una amplia gama de servicios para satisfacer todas tus necesidades de lavandería (Todos los precios se indican por kilo.) </p>
             </div>
             <div class="services-grid">
                 <div class="service-card">
@@ -659,7 +659,7 @@
                     <h3>Limpieza de Tenis</h3>
                     <p>Limpieza profesional de calzado deportivo.</p>
                     <div class="service-price">$60 por par</div>
-                    <div class="service-price">3x2 Promoción</div>
+                   
                 </div>
                 <div class="service-card">
                     <i class="fas fa-bolt service-icon"></i>
@@ -712,7 +712,7 @@
                     </tr>
                     <tr>
                         <td class="day-highlight">Jueves de Descuento</td>
-                        <td>$35 el kilo todo el día y si traes más de 10kg 10% de descuento adicional</td>
+                        <td>$30 el kilo todo el día y si traes más de 10kg 10% de descuento adicional</td>
                     </tr>
                     <tr>
                         <td class="day-highlight">Viernes de Tenis</td>
@@ -736,7 +736,7 @@
             </div>
             <div class="pricing-container">
                 <div class="price-card">
-                    <h3>Servicios Básicos</h3>
+                    <h3>Servicios Básicos (precio por kg.)</h3>
                     <div class="price-item">
                         <span class="price-name">Lavado especial blancos</span>
                         <span class="price-value">$50</span>
@@ -857,6 +857,8 @@
                                 <option value="tenis">Limpieza de Tenis</option>
                                 <option value="express">Lavado Express</option>
                                 <option value="cama">Ropa de Cama</option>
+				<option value="otro">Otro</option>
+
                             </select>
                         </div>
                         <div class="form-group">
@@ -914,7 +916,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Lavandería Juquilita. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Lavandería Juquilita. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
