--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                             <i class="fas fa-map-marker-alt contact-icon"></i>
                             <div>
                                 <h4>Dirección</h4>
-                                <p><a href="https://maps.app.goo.gl/wVw1F3Zy52bPf1oR8" target="_blank" style="color: var(--primary);">Ver en Google Maps</a></p>
+                                <p><a href="https://maps.app.goo.gl/XfUb3TWnuUr1vZxZA" target="_blank" style="color: var(--primary);">Ver en Google Maps</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -944,3 +944,4 @@
 </body>
 
 </html>
+
