--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
                         <li><i class="fas fa-phone"></i> 951 306 3124</li>
                         <li><i class="fas fa-phone"></i> 954 524 0173</li>
                         <li><i class="fas fa-envelope"></i> josueadanleon187@gmail.com</li>
-                        <li><a href="https://maps.app.goo.gl/wVw1F3Zy52bPf1oR8" target="_blank"><i class="fas fa-map-marker-alt"></i> Ver Ubicación</a></li>
+                        <li><a href="https://www.google.com/maps/place/Lavander%C3%ADa+Juquilita/@16.2366939,-97.2933857,18z/data=!4m6!3m5!1s0x85b871c03c9204db:0x41d67df30fe11609!8m2!3d16.2366701!4d-97.2933791!16s%2Fg%2F11xzw92gh9?entry=ttu&g_ep=EgoyMDI1MTAyMi4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="fas fa-map-marker-alt"></i> Ver Ubicación</a></li>
                     </ul>
                 </div>
             </div>
@@ -944,4 +944,5 @@
 </body>
 
 </html>
+
 
